# pomaex

./: .bumpversion.cfg  .flake8  CODE_OF_CONDUCT.md  LICENSE  Makefile  README.md  SECURITY.md  pomaex.py  pyproject.toml  setup.cfg
docker/: Dockerfile  README.md
pomaex/: __init__.py  __main__.py
pomaex/scrappers/: __init__.py  alpha_vantage.py  alphavantage.py
tests/test_example/: test_hello.py
