[tool.poetry]
name = "pomaex"
version = "0.1.0"
description = "Portable Market Exchange {Repository,Scrapper,Format} for Python"
authors = ["Rodrigo Dlugokenski <rddweb@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://gitlab.com/rdlu/pomaex"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.1"
requests = "^2.24.0"
ujson = "^3.1.0"

[tool.poetry.dev-dependencies]
pytest = "^6.0.1"
flake8 = "^3.8.3"
bump2version = "^1.0.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
