[tool.poetry]
name = "pomaex"
version = "0.1.0"
description = "Portable Market Exchange {Repository,Scrapper,Format} for Python"
authors = ["Rodrigo Dlugokenski <rddweb@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://gitlab.com/rdlu/pomaex"

# Keywords description https://python-poetry.org/docs/pyproject/#keywords
keywords = []  # Update me

# Pypi classifiers: https://pypi.org/classifiers/
classifiers = [  # Update me
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.1"
requests = "^2.24.0"
ujson = "^3.1.0"
typer = "^0.3.2"
rich = "^5.2.0"

[tool.poetry.dev-dependencies]
pytest = "^6.0.1"
flake8 = "^3.8.3"
bump2version = "^1.0.0"
black = "^19.10b0"
bandit = "^1.6.2"
isort = "^5.4.2"

[tool.poetry.scripts]
# Entry points for the package https://python-poetry.org/docs/pyproject/#scripts
"pomaex" = "pomaex.__main__:app"

[tool.black]
# https://github.com/psf/black
line-length = 120
target-version = ["py38"]

[tool.isort]
# https://github.com/timothycrosley/isort/
known_typing = "typing,types,typing_extensions,mypy,mypy_extensions"
sections = "FUTURE,TYPING,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"
include_trailing_comma = true
default_section = "FIRSTPARTY"
multi_line_output = 3
indent = 4
force_grid_wrap = 0
use_parentheses = true
line_length = 80

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
