[tool.poetry]
name = "pomaex"
version = "0.1.0"
description = "Portable Market Exchange {Repository,Scrapper,Format} for Python"
authors = ["Rodrigo Dlugokenski <rddweb@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://gitlab.com/rdlu/pomaex"

keywords = ['alphavantage', 'pandas', 'financial']

# Pypi classifiers: https://pypi.org/classifiers/
classifiers = [  # Update me
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Operating System :: OS Independent",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.8",
  "Topic :: Office/Business :: Financial :: Investment",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Utilities",
]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.1"
requests = "^2.24.0"
ujson = "^3.1.0"
typer = "^0.3.2"
rich = "^5.2.0"

[tool.poetry.dev-dependencies]
pytest = "^6.0.1"
flake8 = "^3.8.3"
bump2version = "^1.0.0"
black = "^19.10b0"
bandit = "^1.6.2"
isort = "^5.4.2"
icecream = "^2.0.0"

[tool.poetry.scripts]
"pomaex" = "pomaex.__main__:app"

[tool.black]
# https://github.com/psf/black
line-length = 120
target-version = ["py38"]

[tool.isort]
# https://github.com/timothycrosley/isort/
known_typing = "typing,types,typing_extensions,mypy,mypy_extensions"
sections = "FUTURE,TYPING,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"
include_trailing_comma = true
default_section = "FIRSTPARTY"
multi_line_output = 3
indent = 4
force_grid_wrap = 0
use_parentheses = true
line_length = 120

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
